chore: update project dependencies, initialize documentation files, and refine backend and web application components.